--- a/src/aspnet-letsencrypt-middleware/project.json
+++ b/src/aspnet-letsencrypt-middleware/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-rc1-final",
+  "version": "1.0.0",
   "authors": [ "Burak Tamtürk" ],
   "description": "LetsEncrypt integration draft as ASP.NET 5 middleware. Feel free to improve it.",
   "dependencies": {
